# basketstack

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
app/client/: package-lock.json  package.json  vite.config.ts
app/client/src/: main.tsx
app/client/src/routes/: __root.tsx  about.tsx  index.tsx
app/web/: __init__.py  app_celery.py  settings.py  urls.py  views.py
app/web/config/: __init__.py  asgi.py  gunicorn.py  wsgi.py
stacks/: .env  docker-compose-local.yml
